# ContextLens

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
contextlens/: __init__.py  config.py  lens.py
contextlens/cli/: commands.py
contextlens/core/: __init__.py  evaluator.py  logger.py  monitor.py  optimizer.py
contextlens/providers/: __init__.py  base.py  gemini_provider.py  groq_provider.py  nvidia_provider.py
examples/: research_assistant.py
logs/: cli_20260329.jsonl  metrics_cli_20260329.jsonl  metrics_research_assistant_demo_20260329.jsonl  metrics_smoke_20260329.jsonl  optimization_demo_20260329.jsonl  research_assistant_demo_20260329.jsonl  smoke_test_20260329.jsonl
testing_files/: smoke_test.py  smoke_test2.py  smoke_test3.py  smoke_test4.py  smoke_test5.py
tests/: conftest.py  test_cli.py  test_evaluator.py  test_logger.py  test_model.py  test_models.py  test_monitor.py  test_optimizer.py
